# internal/delivery/api/docs/swagger.json
@@ -285,7 +285,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.ParseTransactionRequest"
+                            "$ref": "#/definitions/models.ParseTextRequest"
                         }
                     }
                 ],
@@ -294,6 +294,57 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/parser.ParseTextView"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/apierr.Response"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/apierr.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/parse/voice": {
+            "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Parse voice",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Parse"
+                ],
+                "summary": "Parse voice",
+                "parameters": [
+                    {
+                        "description": "Parse transaction request",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.ParseAudioRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/parser.ParseAudioView"
                         }
                     },
                     "400": {
@@ -714,7 +765,18 @@
                 }
             }
         },
-        "models.ParseTransactionRequest": {
+        "models.ParseAudioRequest": {
+            "type": "object",
+            "required": [
+                "file_url"
+            ],
+            "properties": {
+                "file_url": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.ParseTextRequest": {
             "type": "object",
             "required": [
                 "content"
@@ -839,6 +901,29 @@
                     "type": "string"
                 },
                 "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "parser.ParseAudioView": {
+            "type": "object",
+            "properties": {
+                "amount": {
+                    "type": "number"
+                },
+                "category_id": {
+                    "type": "integer"
+                },
+                "confidence": {
+                    "type": "number"
+                },
+                "note": {
+                    "type": "string"
+                },
+                "performed_at": {
+                    "type": "string"
+                },
+                "type": {
                     "type": "string"
                 }
             }
